Use .get(0) instead of getFirst to avoid compilation errors in backport.